--- a/_notebooks/2023-10-26-2D-Arrays.ipynb
+++ b/_notebooks/2023-10-26-2D-Arrays.ipynb
@@ -92,7 +92,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -128,7 +132,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -164,7 +172,11 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -207,7 +219,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -256,7 +272,11 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -304,23 +324,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1 9 5 \n",
+      "10 1 6 5 \n",
+      "6 3 7 2 \n"
+     ]
+    }
+   ],
    "source": [
-    "java.util.random\n",
+    "import java.util.Random;\n",
     "\n",
     "public class Main {\n",
-    "    public static void main(String[] args){\n",
+    "    public static void main(String[] args) {\n",
     "        int rows = 3;\n",
     "        int columns = 4;\n",
-    "        int[][] myArray = new int [rows][colums];\n",
-    "        for (int i = 0; i < rows; i++) { \n",
+    "        int[][] myArray = new int[rows][columns];\n",
+    "        Random random = new Random();\n",
+    "\n",
+    "        for (int i = 0; i < rows; i++) {\n",
     "            for (int j = 0; j < columns; j++) {\n",
-    "        \n",
+    "                // Generate a random integer between 1 and 10\n",
+    "                myArray[i][j] = random.nextInt(10) + 1;\n",
+    "            }\n",
+    "        }\n",
     "\n",
+    "        // Printing the array\n",
+    "        for (int i = 0; i < rows; i++) {\n",
+    "            for (int j = 0; j < columns; j++) {\n",
+    "                System.out.print(myArray[i][j] + \" \");\n",
+    "            }\n",
+    "            System.out.println(); // Move to the next row\n",
+    "        }\n",
     "    }\n",
-    "\n",
     "}\n",
     "Main.main(null)"
    ]
@@ -353,7 +398,11 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -409,7 +458,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -450,7 +503,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -515,11 +572,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "## 3) Traversing 2D Arrays \n",
     "- When we traverse a regular array we use a singular for loop to iterate through each element in the array. However, when we have 2D array we need to use nested for loops to iterate through each element in the array. Below is the difference between the two:\n",
@@ -542,7 +594,11 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -600,9 +656,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 9,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14 is divisible by 7\n",
+      "21 is divisible by 7\n",
+      "28 is divisible by 7\n",
+      "70 is divisible by 7\n"
+     ]
+    }
+   ],
    "source": [
     "public class Main {\n",
     "    public static void main(String[] args) {\n",
@@ -611,9 +682,16 @@
     "            {14, 5, 21},\n",
     "            {25, 28, 70}\n",
     "        };\n",
+    "        for (int i = 0; i < myArray.length; i++) {\n",
+    "            for (int j = 0; j < myArray[i].length; j++) {\n",
+    "                int value = myArray[i][j];\n",
+    "                if (value % 7 == 0) {\n",
+    "                    System.out.println(value + \" is divisible by 7\");\n",
+    "                }\n",
+    "            }\n",
+    "        }\n",
     "    }\n",
     "}\n",
-    "\n",
     "Main.main(null)"
    ]
   },
@@ -630,7 +708,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -675,7 +757,11 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -719,7 +805,11 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -782,7 +872,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "// Linear Search in 2D arrays\n",
@@ -828,7 +922,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public class Main {\n",
@@ -869,8 +967,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "// Binary Search on sorted 2D array\n",
@@ -922,6 +1024,88 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Randomly Generated 2D Array:\n",
+      "[30, 6, 82, 88]\n",
+      "[90, 47, 74, 75]\n",
+      "[72, 38, 98, 66]\n",
+      "Element 42 not found in the array.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Arrays;\n",
+    "import java.util.Random;\n",
+    "\n",
+    "class Main {\n",
+    "\n",
+    "    static int[][] generateRandomArray(int rows, int columns, int minValue, int maxValue) {\n",
+    "        int[][] randomArray = new int[rows][columns];\n",
+    "        Random rand = new Random();\n",
+    "\n",
+    "        for (int i = 0; i < rows; i++) {\n",
+    "            for (int j = 0; j < columns; j++) {\n",
+    "                randomArray[i][j] = rand.nextInt(maxValue - minValue + 1) + minValue;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        return randomArray;\n",
+    "    }\n",
+    "\n",
+    "    static int[] findTarget(int[][] arr, int target) {\n",
+    "        int row = 0;\n",
+    "        int col = arr[row].length - 1;\n",
+    "        while (row < arr.length && col >= 0) {\n",
+    "            if (arr[row][col] == target) {\n",
+    "                return new int[] { row, col };\n",
+    "            }\n",
+    "\n",
+    "            if (arr[row][col] < target) {\n",
+    "                row++;\n",
+    "            } else {\n",
+    "                col--;\n",
+    "            }\n",
+    "        }\n",
+    "        return new int[] { -1, -1 };\n",
+    "    }\n",
+    "\n",
+    "    public static void main(String[] args) {\n",
+    "        int rows = 3;\n",
+    "        int columns = 4;\n",
+    "        int minValue = 1;\n",
+    "        int maxValue = 100; // Adjust the range as needed\n",
+    "        int[][] randomArray = generateRandomArray(rows, columns, minValue, maxValue);\n",
+    "\n",
+    "        int target = 42; // The value you want to find\n",
+    "\n",
+    "        System.out.println(\"Randomly Generated 2D Array:\");\n",
+    "        for (int i = 0; i < rows; i++) {\n",
+    "            System.out.println(Arrays.toString(randomArray[i]));\n",
+    "        }\n",
+    "\n",
+    "        int[] ans = findTarget(randomArray, target);\n",
+    "        if (ans[0] != -1) {\n",
+    "            System.out.println(\"Element \" + target + \" found at index: [\" + ans[0] + \"][\" + ans[1] + \"]\");\n",
+    "        } else {\n",
+    "            System.out.println(\"Element \" + target + \" not found in the array.\");\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -933,7 +1117,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "String[][] array;\n",
@@ -950,7 +1138,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -1008,7 +1200,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
    "outputs": [],
    "source": [
     "public int countIncreaseCols() {\n",
@@ -1058,15 +1254,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 15,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 3 9 7 7 \n",
+      "1 3 2 7 7 \n",
+      "8 8 4 10 4 \n",
+      "10 2 2 9 5 \n",
+      "4 6 8 6 4 \n"
+     ]
+    }
+   ],
    "source": [
-    "// Add the code here:\n",
+    "import java.util.Random;\n",
     "\n",
     "public class random2DA {\n",
-    "    \n",
-    "}\n"
+    "    public static void main(String[] args) {\n",
+    "        int rows = 5;\n",
+    "        int columns = 5;\n",
+    "        int[][] myArray = new int[rows][columns];\n",
+    "        Random random = new Random();\n",
+    "\n",
+    "        for (int i = 0; i < rows; i++) {\n",
+    "            for (int j = 0; j < columns; j++) {\n",
+    "                // Generate a random integer between 1 and 10\n",
+    "                myArray[i][j] = random.nextInt(10) + 1;\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        // Printing the array\n",
+    "        for (int i = 0; i < rows; i++) {\n",
+    "            for (int j = 0; j < columns; j++) {\n",
+    "                System.out.print(myArray[i][j] + \" \");\n",
+    "            }\n",
+    "            System.out.println(); // Move to the next row\n",
+    "        }\n",
+    "    }\n",
+    "}\n",
+    "random2DA.main(null)"
    ]
   },
   {
@@ -1080,20 +1313,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 32,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Part a:\n",
+      "Value 1: 47\n",
+      "Value 2: 51\n",
+      "Value 3: 20\n",
+      "\n",
+      "Part b (Row-major order):\n",
+      "47 3 12 51 74 20 \n",
+      "Part b (Column-major order):\n",
+      "47 51 3 74 12 20 "
+     ]
+    }
+   ],
    "source": [
-    "public class Problem2\n",
-    "{\n",
-    "    public static void main(String[] args)\n",
-    "    {\n",
-    "        int[][] arr = { {47,3,12},{51,74,20} };\n",
+    "public class Problem2 {\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] arr = {\n",
+    "            {47, 3, 12},\n",
+    "            {51, 74, 20}\n",
+    "        };\n",
     "\n",
+    "        // A\n",
+    "        int value1 = arr[0][0]; // 47\n",
+    "        int value2 = arr[1][0]; // 51\n",
+    "        int value3 = arr[1][2]; // 20\n",
     "\n",
+    "        System.out.println(\"Part a:\");\n",
+    "        System.out.println(\"Value 1: \" + value1);\n",
+    "        System.out.println(\"Value 2: \" + value2);\n",
+    "        System.out.println(\"Value 3: \" + value3);\n",
+    "\n",
+    "        // B\n",
+    "        System.out.println(\"\\nPart b (Row-major order):\");\n",
+    "        for (int row = 0; row < arr.length; row++) {\n",
+    "            for (int col = 0; col < arr[row].length; col++) {\n",
+    "                System.out.print(arr[row][col] + \" \");\n",
+    "            }\n",
+    "        }\n",
+    "\n",
+    "        // C\n",
+    "        System.out.println(\"\\nPart b (Column-major order):\");\n",
+    "        for (int col = 0; col < arr[0].length; col++) {\n",
+    "            for (int row = 0; row < arr.length; row++) {\n",
+    "                System.out.print(arr[row][col] + \" \");\n",
+    "            }\n",
+    "        }\n",
     "    }\n",
     "}\n",
-    "Problem2.main(null);"
+    "Problem2.main(null)"
    ]
   },
   {
@@ -1112,21 +1390,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 \n",
+      "4 5 6 \n",
+      "7 8 9 \n"
+     ]
+    }
+   ],
    "source": [
     "public class Problem3 {\n",
-    "    public static void main(String[] args) { \n",
-    "        int[][] MyArray = { // 2d array of integers\n",
+    "    public static void main(String[] args) {\n",
+    "        int[][] myArray = {\n",
     "            {1, 2, 3},\n",
     "            {4, 5, 6},\n",
     "            {7, 8, 9}\n",
     "        };\n",
-    "        \n",
+    "\n",
+    "        for (int i = 0; i < myArray.length; i++) {\n",
+    "            for (int j = 0; j < myArray[i].length; j++) {\n",
+    "                System.out.print(myArray[i][j] + \" \");\n",
+    "            }\n",
+    "            System.out.println(); // Move to the next line for the next row\n",
+    "        }\n",
     "    }\n",
     "}\n",
-    "Problem3.main(null);"
+    "Problem3.main(null)\n"
    ]
   },
   {
@@ -1139,16 +1437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 27,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4 5 6 7 8 "
+     ]
+    }
+   ],
    "source": [
-    "public class Test1\n",
+    "public class Problem4\n",
     "{\n",
     "\n",
     "    public static void main(String[] args)\n",
     "    {\n",
-    "        // ADD CODE HERE //\n",
+    "        int[][] table = new int[3][3];\n",
     "\n",
     "        // Should print the values in table\n",
     "        int count = 0;\n",
@@ -1162,7 +1472,8 @@
     "            }\n",
     "        }\n",
     "    }\n",
-    "}\n"
+    "}\n",
+    "Problem4.main(null)"
    ]
   },
   {
@@ -1175,27 +1486,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 31,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Brice Marvin Anna Kamal Maria Elissa "
+     ]
+    }
+   ],
    "source": [
-    "public class Test1\n",
-    "{\n",
-    "    public static void main(String[] args)\n",
-    "    {\n",
-    "        // ADD CODE HERE //\n",
-    "\n",
+    "public class Problem5 {\n",
+    "    public static void main(String[] args) {\n",
+    "        String[][] students = {\n",
+    "            {\"Brice\", \"Marvin\", \"Anna\"},\n",
+    "            {\"Kamal\", \"Maria\", \"Elissa\"}\n",
+    "        };\n",
     "\n",
     "        // Should print the values in students in order\n",
-    "        for (int row = 0; row <= students.length; row++)\n",
-    "        {\n",
-    "            for (int col = 0; col <= students.length; col++)\n",
-    "            {\n",
+    "        for (int row = 0; row < students.length; row++) {\n",
+    "            for (int col = 0; col < students[row].length; col++) {\n",
     "                System.out.print(students[row][col] + \" \");\n",
     "            }\n",
     "        }\n",
     "    }\n",
-    "}\n"
+    "}\n",
+    "Problem5.main(null)"
    ]
   }
  ],
@@ -1209,7 +1531,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "java",
+   "name": "Java",
    "pygments_lexer": "java",
    "version": "11.0.20+8-post-Ubuntu-1ubuntu120.04"
   },
