--- a/_notebooks/2023-10-27-lessons.ipynb
+++ b/_notebooks/2023-10-27-lessons.ipynb
@@ -11,15 +11,272 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Inheritance Hierarchies is the idea that if we have a superclass (A) that then has a subclass (B) and that subclass then has another subclass (C), then subclass C is also a subclass of A.\n",
+    "Inheritance Hierarchies is the idea that:\n",
     "\n",
-    "Here is a little diagram to display this:"
+    "- If we have a public superclass (A) that then has a public subclass (B) and that public subclass then has another public subclass (C), then the subclass C is also a subclass of the superclass A and so subclass C is extending superclass A"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Here is an example of this:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Class Declarations:\n",
+    "\n",
+    "// Superclass (A)\n",
+    "public class Vehicles{}\n",
+    "// Subclass (B)\n",
+    "public class Car extends Vehicles{}\n",
+    "// Subclass (C)\n",
+    "public class Sedan extends Car{}\n",
+    "// Subclass (D)\n",
+    "public class Truck extends Vehicles{}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is a diagram displaying the relationship:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Inheritance Hierarchy Example](https://raw.githubusercontent.com/JishnuS420/BlogCSA/main/images/inheritance-hierarchy-example.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This diagram shows the the vehicle superclass which then has two subclasses: Car and Truck, however, Car has another subclass called Sedan\n",
+    "\n",
+    "- Based on this diagram, we know that Truck has a \"is-a\" relationship with Vehicle, Car also has a \"is-a\" relationship with Vehicle, and since Car has an \"is-a\" relationship with Vehicle, so does Sedan\n",
+    "\n",
+    "- So Sedan also has a \"is-a\" relationship with Vehicle\n",
+    "\n",
+    "If we assume that all of the class contain a constructor with no arguments, this then allows for us to declare a superclass reference variable to hold a subclass object:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "Vehicles v1 = new Truck();\n",
+    "Vehicles v2 = new Car();\n",
+    "\n",
+    "// instead of doing\n",
+    "Car v3 = new Sedan();\n",
+    "// We have the option to do this instead\n",
+    "Vehicles v4 = new Sedan();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "However, it is important to remember that you can't declare a Subclass variable and put in a Superclass object"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// dont do this\n",
+    "Sedan v5 = new Vehicle();"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Popcorn Hack: Using a superclass and subclasses of your choice, assuming that the classes contain a constructor with no arguments, create Class Declarations and Superclass References"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// show here"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Why would we want to do this?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- When doing object oriented programming, we are able to create a superclass with common attributes and then have subclasses with more specific traits \n",
+    "\n",
+    "- By doing this, we get rid of code redundancy and it also makes the easier to reuse common aspects without needing to write them out every time while still presenting the option to override any attribute from the superclass to better represent the subclass\n",
+    "\n",
+    "- All the subclasses adhere to one superclass so this makes updates to code much easier and allows you to take advantage of **polymorphism** to unify the code and allow for more flexible and manageable code (more about this in 9.6)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Here is a Complete Example of the Inheritance Hierarchy from above:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Truck Information:\n",
+      "Brand: Ford\n",
+      "Year: 2023\n",
+      "Max Load Capacity: 10.5 tons\n",
+      "\n",
+      "Car Information:\n",
+      "Brand: Toyota\n",
+      "Year: 2023\n",
+      "Number of Doors: 4\n",
+      "\n",
+      "Sedan Information:\n",
+      "Brand: Honda\n",
+      "Year: 2023\n",
+      "Number of Doors: 4\n",
+      "Leather Seats: true\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Vehicle {\n",
+    "    private String brand; // private instance variable\n",
+    "    private int year; // private instance variable\n",
+    "\n",
+    "    public Vehicle(String brand, int year) {\n",
+    "        this.brand = brand;\n",
+    "        this.year = year;\n",
+    "    }\n",
+    "\n",
+    "    public void displayInfo() { // common variables for each vehicle\n",
+    "        System.out.println(\"Brand: \" + brand);\n",
+    "        System.out.println(\"Year: \" + year);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Truck extends Vehicle {\n",
+    "    // feature that only a truck can have\n",
+    "    private double maxLoadCapacity;\n",
+    "\n",
+    "    public Truck(String brand, int year, double maxLoadCapacity) {\n",
+    "        super(brand, year); // Inherits the variables from superclass\n",
+    "        this.maxLoadCapacity = maxLoadCapacity;\n",
+    "    }\n",
+    "\n",
+    "    @Override // Override allows for displayInfo to now also show the trait specific to the Truck while still keeping the main variables\n",
+    "    public void displayInfo() {\n",
+    "        super.displayInfo(); // Reuse the displayInfo method from the superclass\n",
+    "        System.out.println(\"Max Load Capacity: \" + maxLoadCapacity + \" tons\");\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Car extends Vehicle {\n",
+    "    // something that cars have\n",
+    "    private int numberOfDoors;\n",
+    "\n",
+    "    public Car(String brand, int year, int numberOfDoors) {\n",
+    "        super(brand, year);\n",
+    "        this.numberOfDoors = numberOfDoors;\n",
+    "    }\n",
+    "\n",
+    "    @Override // Override allows for displayInfo to now also show the trait specific to the Car while still keeping the main variables\n",
+    "    public void displayInfo() {\n",
+    "        super.displayInfo(); // Reuse the displayInfo method from the superclass\n",
+    "        System.out.println(\"Number of Doors: \" + numberOfDoors);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "class Sedan extends Car {\n",
+    "    // Sedan is luxury so trait specific to sedan\n",
+    "    private boolean leatherSeats;\n",
+    "\n",
+    "    public Sedan(String brand, int year, int numberOfDoors, boolean leatherSeats) {\n",
+    "        super(brand, year, numberOfDoors);\n",
+    "        this.leatherSeats = leatherSeats;\n",
+    "    }\n",
+    "\n",
+    "    @Override // Override allows for displayInfo to now also show the trait specific to the Sedan while still keeping the main variables\n",
+    "    public void displayInfo() {\n",
+    "        super.displayInfo(); // Reuse the displayInfo method from the superclass\n",
+    "        System.out.println(\"Leather Seats: \" + leatherSeats);\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Vehicle v1 = new Truck(\"Ford\", 2023, 10.5);\n",
+    "        Vehicle v2 = new Car(\"Toyota\", 2023, 4);\n",
+    "        Vehicle v3 = new Sedan(\"Honda\", 2023, 4, true);\n",
+    "\n",
+    "        System.out.println(\"Truck Information:\");\n",
+    "        v1.displayInfo();\n",
+    "        \n",
+    "        System.out.println(\"\\nCar Information:\");\n",
+    "        v2.displayInfo();\n",
+    "        \n",
+    "        System.out.println(\"\\nSedan Information:\");\n",
+    "        v3.displayInfo();\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    ">Popcorn Hack: In your own words describe the importance of Inheritance Hierarchies"
+   ]
   }
  ],
  "metadata": {
@@ -29,7 +286,12 @@
    "name": "java"
   },
   "language_info": {
-   "name": "java"
+   "codemirror_mode": "java",
+   "file_extension": ".jshell",
+   "mimetype": "text/x-java-source",
+   "name": "Java",
+   "pygments_lexer": "java",
+   "version": "11.0.20+8-post-Ubuntu-1ubuntu120.04"
   }
  },
  "nbformat": 4,
