--- a/_notebooks/2023-10-19-Unit6-Array.ipynb
+++ b/_notebooks/2023-10-19-Unit6-Array.ipynb
@@ -457,6 +457,83 @@
     "}\n",
     "MinMax.main(null)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Hacks\n",
+    "Given an input of N integers, find A, the maximum, B, the minimum, and C the median.\n",
+    "\n",
+    "Print the following in this order: \n",
+    "- A + B + C\n",
+    "- A - B - C\n",
+    "- (A + B) * C"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "vscode": {
+     "languageId": "java"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input List: [20]\n",
+      "A + B + C = 60\n",
+      "A - B - C = -20\n",
+      "(A + B) * C = 800\n"
+     ]
+    }
+   ],
+   "source": [
+    "import java.util.Arrays;\n",
+    "import java.util.Scanner;\n",
+    "\n",
+    "public class Main {\n",
+    "    public static void main(String[] args) {\n",
+    "        Scanner scanner = new Scanner(System.in);\n",
+    "\n",
+    "        // Input: N integers as a space-separated string\n",
+    "        String[] inputStr = scanner.nextLine().split(\" \");\n",
+    "        int N = inputStr.length;\n",
+    "        int[] inputArray = new int[N];\n",
+    "\n",
+    "        for (int i = 0; i < N; i++) {\n",
+    "            inputArray[i] = Integer.parseInt(inputStr[i]);\n",
+    "        }\n",
+    "\n",
+    "        // Step 1: Sort the array\n",
+    "        Arrays.sort(inputArray);\n",
+    "\n",
+    "        // Step 2: Calculate A (maximum)\n",
+    "        int A = inputArray[N - 1];\n",
+    "\n",
+    "        // Step 3: Calculate B (minimum)\n",
+    "        int B = inputArray[0];\n",
+    "\n",
+    "        // Step 4: Calculate C (median)\n",
+    "        int C;\n",
+    "        if (N % 2 == 1) {\n",
+    "            C = inputArray[N / 2];  // If N is odd\n",
+    "        } else {\n",
+    "            C = (inputArray[N / 2] + inputArray[N / 2 - 1]) / 2;  // If N is even\n",
+    "        }\n",
+    "\n",
+    "        // Printing the expressions:\n",
+    "        System.out.println(\"Input List: \" + Arrays.toString(inputArray));\n",
+    "        System.out.println(\"A + B + C = \" + (A + B + C));\n",
+    "        System.out.println(\"A - B - C = \" + (A - B - C));\n",
+    "        System.out.println(\"(A + B) * C = \" + ((A + B) * C));\n",
+    "    }\n",
+    "}\n",
+    "Main.main(null)"
+   ]
   }
  ],
  "metadata": {
