--- a/_notebooks/2023-08-22-JavaHello.ipynb
+++ b/_notebooks/2023-08-22-JavaHello.ipynb
@@ -1,6 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "# this is YAML front matter\n",
+    "layout: post\n",
+    "title: Java Hello\n",
+    "description:\n",
+    "courses: { csa: {week: 1} }\n",
+    "categories:\n",
+    "author:\n",
+    "type: hacks\n",
+    "---"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
