--- a/_notebooks/2023-08-22-Week-0-Hacks.ipynb
+++ b/_notebooks/2023-08-22-Week-0-Hacks.ipynb
@@ -11,7 +11,7 @@
     "title: Week 0 Hacks\n",
     "description: Things we did and learnt during week 0\n",
     "courses: {csa: {week: 0} }\n",
-    "type: tangibles\n",
+    "type: hacks\n",
     "---"
    ]
   },
