--- a/_notebooks/2023-09-06-java-primitives.ipynb
+++ b/_notebooks/2023-09-06-java-primitives.ipynb
@@ -12,7 +12,7 @@
     "description: An introduction to primitive types using input, output, and a grading calculator example.\n",
     "courses: { csa: {week: 4, categories: [2.A, 2.B]} }\n",
     "categories: []\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "---"
    ]
   },
