--- a/_notebooks/2023-09-15-U1-Types.ipynb
+++ b/_notebooks/2023-09-15-U1-Types.ipynb
@@ -8,6 +8,8 @@
     "layout: post\n",
     "title: U1 Data Types Lesson\n",
     "toc: true\n",
+    "type: hacks\n",
+    "courses: {csa: {week: 7} }\n",
     "---"
    ]
   },
