--- a/_notebooks/2023-09-20-CSAFRQ-2019-3-Notes.ipynb
+++ b/_notebooks/2023-09-20-CSAFRQ-2019-3-Notes.ipynb
@@ -6,9 +6,9 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: APCSA 2019 Question 3 \n",
+    "title: APCSA 2019 Question 3 - Notes as well\n",
     "description:\n",
-    "courses: { csa: {week: 4} }\n",
+    "courses: { csa: {week: 5} }\n",
     "categories: []\n",
     "type: hacks\n",
     "toc: true\n",
