--- a/_notebooks/2023-09-25-U2-Object-lesson.ipynb
+++ b/_notebooks/2023-09-25-U2-Object-lesson.ipynb
@@ -10,6 +10,8 @@
     "layout: post\n",
     "title: U2 Object classes\n",
     "description: Object classes\n",
+    "type: hacks\n",
+    "courses: {csa: {week: 7} }\n",
     "---"
    ]
   },
