--- a/_notebooks/2023-10-17-Unit5.ipynb
+++ b/_notebooks/2023-10-17-Unit5.ipynb
@@ -14,6 +14,8 @@
         "title: U5 | Classes\n",
         "description: while Loops, for Loops, Developing Algorithms Using Strings, Nested Iteration, Informal code analysis >>> AP Exam Weighting 17.5-22.5%\n",
         "authors: Aliya, Ekam, Emma, Raunak, Luna\n",
+        "courses: {csa: {week: 9} }\n",
+        "type: hacks\n",
         "---"
       ]
     },
