--- a/_notebooks/2023-10-19-Unit7-ArrayList.ipynb
+++ b/_notebooks/2023-10-19-Unit7-ArrayList.ipynb
@@ -8,8 +8,8 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Unit 7 ArrayLists - Teacher notebook\n",
-    "description:  Lesson on the College Board Unit 6 Arrays. This is the teacher notebook.\n",
+    "title: Unit 7 ArrayLists\n",
+    "description:  Lesson on the College Board Unit 7 ArraysLists\n",
     "courses: { csa: {week: 10} }\n",
     "type: hacks\n",
     "---"
