--- a/_notebooks/2023-10-26-2D-Arrays.ipynb
+++ b/_notebooks/2023-10-26-2D-Arrays.ipynb
@@ -6,10 +6,10 @@
    "source": [
     "---\n",
     "layout: post\n",
-    "title: 2D Arrays\n",
+    "title: Unit 8 2D Arrays\n",
     "description: Lesson on 2D Arrays\n",
-    "courses: { csa: {week: 1} }\n",
-    "type: lessons\n",
+    "courses: { csa: {week: 10} }\n",
+    "type: hacks\n",
     "toc: true\n",
     "comments: true\n",
     "---"
