--- a/_notebooks/2023-10-28-lessons2.ipynb
+++ b/_notebooks/2023-10-28-lessons2.ipynb
@@ -4,6 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---\n",
+    "toc: true\n",
+    "comments: true\n",
+    "layout: post\n",
+    "title: 9.7 lesson\n",
+    "description:  Lesson on the College Board Unit 9.7\n",
+    "type: hacks\n",
+    "courses: {csa: {week: 10} }\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# 9.7 Object Superclass"
    ]
   },
