--- a/_notebooks/2023-08-23-java-console_games.ipynb
+++ b/_notebooks/2023-08-23-java-console_games.ipynb
@@ -12,7 +12,7 @@
     "courses: { csa: {week: 1, categories: [1.A]} }\n",
     "categories: [C3.1, C4.6]\n",
     "author: Vunsh Mehta\n",
-    "type: ccc\n",
+    "type: hacks\n",
     "---"
    ]
   },
