--- a/_notebooks/2023-10-19-Unit6-Array.ipynb
+++ b/_notebooks/2023-10-19-Unit6-Array.ipynb
@@ -8,8 +8,10 @@
     "toc: true\n",
     "comments: true\n",
     "layout: post\n",
-    "title: Unit 6 Arrays - Teacher notebook\n",
-    "description:  Lesson on the College Board Unit 6 Arrays. This is the teacher notebook.\n",
+    "title: Unit 6 Arrays\n",
+    "description:  Lesson on the College Board Unit 6 Arrays.\n",
+    "type: hacks\n",
+    "courses: {csa: {week: 9} }\n",
     "---"
    ]
   },
@@ -92,11 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -142,11 +140,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -208,11 +202,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -326,11 +316,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -379,11 +365,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -474,11 +456,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "java"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -546,7 +524,7 @@
    "codemirror_mode": "java",
    "file_extension": ".jshell",
    "mimetype": "text/x-java-source",
-   "name": "Java",
+   "name": "java",
    "pygments_lexer": "java",
    "version": "11.0.20+8-post-Ubuntu-1ubuntu120.04"
   },
