--- a/_notebooks/2023-09-17-boolean-lesson.ipynb
+++ b/_notebooks/2023-09-17-boolean-lesson.ipynb
@@ -10,7 +10,7 @@
     "description: Lesson on booleans and if statements!\n",
     "comments: true\n",
     "courses: { csa: {week: 8} }\n",
-    "type: lessons\n",
+    "type: hacks\n",
     "---"
    ]
   },
