--- a/_notebooks/2023-10-12-Unit4.ipynb
+++ b/_notebooks/2023-10-12-Unit4.ipynb
@@ -13,7 +13,7 @@
         "title: U4 | Iteration\n",
         "description: while Loops, for Loops, Developing Algorithms Using Strings, Nested Iteration, Informal code analysis >>> AP Exam Weighting 17.5-22.5%\n",
         "authors: Aliya, Ekam, Emma, Raunak, Luna\n",
-        "type: plans\n",
+        "type: hacks\n",
         "courses: {csa: {week: 8} }\n",
         "---"
       ]
