--- a/_notebooks/2023-12-07-CRUD-JQUERY-HACKS.ipynb
+++ b/_notebooks/2023-12-07-CRUD-JQUERY-HACKS.ipynb
@@ -175,11 +175,7 @@
     "  $('#data-table').on('click', '.update-btn', function() {\n",
     "    const idToEdit = $(this).data('id');\n",
     "    const updateIndex = initialData.findIndex(item => item.id === idToEdit);\n",
-    "\n",
-    "    // HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS HACKS \n",
-    "\n",
-    "    // FINISH THIS PART\n",
-    "    // UPDATE\n",
+    "    renderData(newData);\n",
     "  });\n",
     "\n",
     "\n",
